# meso

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/meso-app/: Cargo.toml
crates/meso-app/src/: alerts_pane.rs  app.rs  config.rs  forecast_pane.rs  location_panel.rs  main.rs  models_pane.rs  national_pane.rs  observations_pane.rs  panel.rs  radar_overlay_dialog.rs  radar_pane.rs  runtime.rs  satellite_pane.rs  settings_panel.rs  soundings_pane.rs  spc_pane.rs  text_pane.rs  ui.rs  updraft_settings.rs
crates/meso-data/: Cargo.toml
crates/meso-data/src/: cache.rs  http.rs  lib.rs  map_data.rs
crates/meso-data/src/alerts/: mod.rs
crates/meso-data/src/forecast/: mod.rs
crates/meso-data/src/geo/: latlon.rs  mod.rs  projection.rs  sites.rs
crates/meso-data/src/goes/: mod.rs
crates/meso-data/src/mesoanalysis/: mod.rs
crates/meso-data/src/models/: mod.rs  ncep.rs
crates/meso-data/src/national/: mod.rs
crates/meso-data/src/observations/: mod.rs
crates/meso-data/src/radar/: color_palette.rs  download.rs  level2.rs  level3.rs  mod.rs  products.rs
crates/meso-data/src/soundings/: mod.rs
crates/meso-data/src/spc/: mod.rs
crates/meso-data/src/storm_tracks/: mod.rs
crates/meso-data/src/text_products/: mod.rs
crates/meso-data/src/updraft/: mod.rs
crates/meso-data/tests/: alerts.rs  forecast.rs  goes.rs  radar.rs
crates/meso-render/: Cargo.toml
crates/meso-render/src/: cairo_render.rs  frame.rs  geometry.rs  lib.rs  overlay.rs  viewport.rs  wgpu_render.rs
crates/meso-updraft/: Cargo.toml
crates/meso-updraft/src/: fetch.rs  main.rs
data/: meso-updraft.service
