[package]
name = "meso-data"
description = "Data fetching, decoding, and domain models for Meso"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
byteorder.workspace = true
bzip2.workspace = true
flate2.workspace = true
image.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
geo.workspace = true
regex.workspace = true
toml.workspace = true
directories.workspace = true
