[package]
name = "meso-updraft"
description = "Background caching daemon for Meso weather application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "meso-updraft"
path = "src/main.rs"

[dependencies]
meso-data = { path = "../meso-data" }
tokio.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true
